@@ -1,5 +1,10 @@
 2008-08-28  Tim Waugh  <twaugh@redhat.com>
 
+	* cupsconnection.c (Connection_getJobAttributes): New parameter
+	requested_attributes.
+
+2008-08-28  Tim Waugh  <twaugh@redhat.com>
+
 	* cupsconnection.c (get_requested_attrs): New function for
 	extracting requested attributes from list.
 	(free_requested_attrs): Deallocate memory.
